# G4OCCT

./: .clang-format  .clang-tidy  .codespell-ignore  .dockerignore  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE.spdx  README.md  bench_assembly_raw.json
.github/: asan.supp  cmake-lint.py  copilot-instructions.md  (+6 more)
.github/downstream_test/: CMakeLists.txt  downstream_app.cc
src/app/g4occt/: CMakeLists.txt  G4OCCTActionInitialization.cc  G4OCCTActionInitialization.hh  G4OCCTAppConfig.hh.in  G4OCCTDetectorConstruction.cc  G4OCCTDetectorConstruction.hh  G4OCCTEventAction.cc  G4OCCTEventAction.hh  G4OCCTOutputConfig.cc  G4OCCTOutputConfig.hh  G4OCCTRunAction.cc  G4OCCTRunAction.hh  G4OCCTSteppingAction.cc  G4OCCTSteppingAction.hh  G4OCCTTrackingAction.cc  G4OCCTTrackingAction.hh  check_nonempty.cmake  main.cc
src/app/g4occt/macros/: gui.mac  init_batch.mac  init_vis.mac  load_test.mac.in  run_output.mac
src/benchmarks/: CMakeLists.txt  bench_assembly_navigator.cc  bench_callgrind.cc  bench_navigator.cc  callgrind_macros.hh  generate_triple_box_step.cc
src/dd4hep/: CMakeLists.txt  G4OCCT_STEPAssembly.cc  G4OCCT_STEPAssemblySD.cc  G4OCCT_STEPAssemblySD.hh  G4OCCT_STEPAssembly_impl.cc  G4OCCT_STEPAssembly_impl.hh  G4OCCT_STEPSolid.cc  G4OCCT_STEPSolid_impl.cc  G4OCCT_STEPSolid_impl.hh
src/dd4hep/tests/: CMakeLists.txt  compact_step_assembly.xml.in  compact_step_solid.xml.in  test_dd4hep_plugins.cc
src/examples/B1/: .clang-tidy  CMakeLists.txt  exampleB1.cc  run.mac
src/examples/B1/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
src/examples/B1/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
src/examples/B1/step/: shape2.step
src/examples/B4c/: .clang-tidy  CMakeLists.txt  exampleB4.in  exampleB4c.cc  materials.xml  run_profile.mac
src/examples/B4c/include/: ActionInitialization.hh  CalorHit.hh  CalorimeterSD.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh
src/examples/B4c/src/: ActionInitialization.cc  CalorHit.cc  CalorimeterSD.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc
src/examples/B4c/step/: absorber.step  gap.step
src/tests/: CMakeLists.txt  G4OCCTFatalCatchGuard.hh  G4OCCTTestExceptionHandler.hh  g4occt_test_env.cc  navigation_test_harness.hh  test_assembly_volume.cc  test_bounding_limits.cc  test_calculate_extent.cc  test_create_polyhedron.cc  test_distance_to_in_ray.cc  test_distance_to_in_safety.cc  test_distance_to_out_ray.cc  test_distance_to_out_safety.cc  test_exact_distance_to_in.cc  test_exact_distance_to_out.cc  test_get_extent.cc  test_logical_volume.cc  test_material_map.cc  test_material_map_reader.cc  test_navigation_harness.cc  test_navigation_inside.cc  test_placement.cc  test_sensitive_detector_map.cc  test_solid.cc  test_surface_normal.cc
src/tests/downstream_test/: CMakeLists.txt  downstream_app.cc
src/tests/fixtures/assembly-comparison/: .gitignore  regenerate.sh
src/tests/fixtures/assembly-comparison/barrel-tracker-v1/: generate.tcl  geometry.gdml  materials.xml  provenance.yaml  shape.step
src/tests/fixtures/assembly-comparison/endcap-calorimeter-v1/: generate.tcl  geometry.gdml  materials.xml  provenance.yaml  shape.step
src/tests/fixtures/assembly-comparison/forward-spectrometer-v1/: generate.tcl  geometry.gdml  materials.xml  provenance.yaml  shape.step
src/tests/fixtures/assembly-comparison/string-array-v1/: generate.tcl  geometry.gdml  materials.xml  provenance.yaml  shape.step
src/tests/fixtures/assembly-comparison/triple-box-v1/: generate.py  generate.tcl  geometry.gdml  materials.xml  provenance.yaml  shape.step
src/tests/fixtures/geometry/: README.md  manifest.yaml
src/tests/fixtures/geometry/boolean-compound/: manifest.yaml  regenerate.sh
src/tests/fixtures/geometry/boolean-compound/G4IntersectionSolid/box-overlap-x10-v1/: generate.tcl  provenance.yaml  shape.step
src/tests/fixtures/geometry/boolean-compound/G4MultiUnion/triple-box-chain-v1/: generate.tcl  provenance.yaml  shape.step
src/tests/fixtures/geometry/boolean-compound/G4SubtractionSolid/box-core-cut-v1/: generate.tcl  provenance.yaml  shape.step
src/tests/fixtures/geometry/boolean-compound/G4UnionSolid/box-overlap-x10-v1/: generate.tcl  provenance.yaml  shape.step
src/tests/fixtures/geometry/direct-primitives/: manifest.yaml  regenerate.sh
src/tests/fixtures/geometry/direct-primitives/G4Box/box-20x30x40-v1/: generate.tcl  provenance.yaml  shape.step
src/tests/fixtures/geometry/direct-primitives/G4Cons/cons-r8-r3-z24-v1/: generate.tcl  provenance.yaml  shape.step
src/tests/fixtures/geometry/direct-primitives/G4CutTubs/cut-tubs-r12-z40-tilted-x-v1/: generate.tcl  provenance.yaml  shape.step
src/tests/fixtures/geometry/nist-ctc/: .gitignore  fetch.sh  manifest.yaml
src/tests/fixtures/geometry/profile-faceted/: manifest.yaml  regenerate.sh
src/tests/fixtures/geometry/tessellated/: manifest.yaml  regenerate.sh
src/tests/fixtures/geometry/tools/: normalize_step_header.py  translate_step.py
src/tests/fixtures/geometry/twisted-swept/: manifest.yaml  regenerate.sh
src/tests/fixtures/geometry/twisted-swept/tools/: generate_twisted_fixtures.cc
src/tests/fixtures/geometry/wrapper-decorator/: manifest.yaml  regenerate.sh
src/tests/geometry/: fixture_inside_compare.cc  fixture_inside_compare.hh  fixture_manifest.cc  fixture_manifest.hh  fixture_navigation_summary.hh  fixture_polyhedron_compare.cc  fixture_polyhedron_compare.hh  fixture_ray_compare.cc  fixture_ray_compare.hh  fixture_safety_compare.cc  fixture_safety_compare.hh  fixture_solid_builder.cc  fixture_solid_builder.hh  fixture_validation.cc  fixture_validation.hh  render_geometry_fixtures.cc  test_geometry_validation.cc  test_nist_ctc_inside_volume.cc  yaml_subset.cc  yaml_subset.hh
src/tests/geometry/geant4_private/: G4RayTracerViewer.hh  G4TheRayTracer.hh
(+196 files in other folders)
